--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="add">
             <div class="add_container">
                 <input type="text" class="add_description">
-                    <button class="add_btn"> Button
+                    <button class="add_btn"> Add Task
                     <i class="ion-ios-checkmark-outline"></i></button>
             </div>
         </div>
